syntax = "proto3";

package blogs;

import "google/api/resource.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

service Blogs {
  rpc ListBlogs(ListBlogsRequest) returns (ListBlogsResponse);
  rpc ListPublishedBlogs(ListPublishedBlogsRequest) returns (ListPublishedBlogsResponse);
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
  rpc GetBlog(GetBlogRequest) returns (GetBlogResponse);
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse);
  rpc PublishBlog(PublishBlogRequest) returns (PublishBlogResponse);
}

service Tags {
  rpc SetBlogTags(SetBlogTagsRequest) returns (SetBlogTagsResponse);
  rpc CreateTag(CreateTagRequest) returns (Tag);
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse);
  rpc DeleteTag(DeleteTagRequest) returns (google.protobuf.Empty);
}

message Tag {
  string id = 1;
  string name = 2;
}

message Blog {
  option (google.api.resource) = {
    type: "grpcapi.amirsalarsafaei.com/Blog"
    pattern: "blogs/{blog}"
    singular: "blog"
    plural: "blogs"
  };
  enum State {
    STATE_UNSPECIFIED = 0;
    DRAFT = 1;
    PUBLISHED = 2;
  }

  string id = 1;
  string content = 2;
  string title = 3;
  optional string image_url = 8;
  repeated Tag tags = 4;
  State state = 7 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  google.protobuf.Timestamp published_at = 5 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];
  google.protobuf.Timestamp created_at = 6 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];
}

message ListBlogsRequest {
  string page_token = 1;
  int32 page_size = 2;
}

message ListBlogsResponse {
  repeated Blog blogs = 1;
  string next_page_token = 2;
}

message ListPublishedBlogsRequest {
  string page_token = 1;
  int32 page_size = 2;
}

message ListPublishedBlogsResponse {
  repeated Blog blogs = 1;
  string next_page_token = 2;
}

message CreateBlogRequest {
  string title = 1;
  string content = 2;
  optional string image_url = 3;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message GetBlogRequest {
  string id = 1;
}

message GetBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  string id = 1;
  string title = 2;
  string content = 3;
  optional string image_url = 4;
}

message UpdateBlogResponse {
  Blog blog = 1;
}

message PublishBlogRequest {
  string id = 1;
}

message PublishBlogResponse {
  Blog blog = 1;
}

message ListPublishedBlogsPaginationToken {
  google.protobuf.Timestamp last_published_at = 1;
}

message ListBlogsPaginationToken {
  google.protobuf.Timestamp last_created_at = 1;
}

message GetTagRequest {
  string id = 1;
}

message ListTagsRequest {}

message ListTagsResponse {
  repeated Tag tags = 1;
}

message DeleteTagRequest {
  string id = 1;
}

message SetBlogTagsRequest {
  string blog_id = 1;
  repeated string tag_names = 2;
}

message SetBlogTagsResponse {
  repeated Tag tags = 1;
}

message CreateTagRequest {
  string name = 1;
}
